manifests/solution/03_wordpress_deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: wordpress

spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
  selector:
    app: wordpress

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: wordpress
  labels:
    app: wordpress

spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:5.7.2
          volumeMounts:
            - mountPath: /var/www/html
              name: data
          ports:
            - name: http
              containerPort: 80
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wordpress-pvc
